fixed hidden mobile header nav menu overflowing on landscape mode

--- a/react-app/src/components/Layout/Header.module.css
+++ b/react-app/src/components/Layout/Header.module.css
@@ -201,15 +201,17 @@
   }
 
   .hamburguer-menu {
-    position: absolute;
+    position: fixed;
     display: flex;
     flex-direction: column;
     justify-content: center;
     z-index: 100;
     top: 0;
     left: 0;
-    height: 100vh;
-    width: 100vw;
+    right: 0;
+    bottom: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
   }
 
   .hamburguer-menu_backdrop {
@@ -255,17 +257,25 @@
     -webkit-animation: fadeIn 1s ease-in-out;
   }
 
-  .hamburguer-nav_buttons {
+  .hamburguer-nav_container {
     position: fixed;
+    z-index: 150;
+    margin: 5rem auto 0 auto;
+    overflow-y: auto;
+    align-self: center;
+    max-height: 100%;
+  }
+
+  .hamburguer-nav_buttons {
     display: flex;
     flex-direction: column;
-    z-index: 150;
     align-items: flex-start;
     justify-content: center;
     animation: fadeIn 1s ease-in-out;
     -webkit-animation: fadeIn 1s ease-in-out;
     align-self: center;
-    margin: 5rem auto auto auto;
+    margin: 0 1rem;
+    height: fit-content;
   }
 
   .link-hamb {
